--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tribute Page</title>
+    <title>Tribute Page</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div id="main">
         <header id="title">
-            <h>Dr. Norman Borlaug</h>
+            <h1>Dr. Norman Borlaug</h1>
             <p>The man who saved a billion lives</p>
         </header>
-        <di id="img-div">
+        <div id="img-div">
             <img src="borlaug.jpg">
             <p id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
-        </di>
+        </div>
         <section id="tribute-info">
+            <h3>Here's a time line of Dr. Borlaug's life:</h3>
             <ul>
                 <li><b>1914</b> - Born in Cresco, Iowa</li>
                 <li><b>1914</b> - Born in Cresco, Iowa</li>
